<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/menu_group_debug">
        <item android:id="@+id/menu_debug_go_to_previous"
              android:icon="@drawable/ic_menu_debug_go_to_previous"
              android:title="@string/menu_debug_go_to_previous"
              android:onClick="debugGoToPrevious"
              app:showAsAction="ifRoom"/>
        <item android:id="@+id/menu_debug_go_to_next"
              android:icon="@drawable/ic_menu_debug_go_to_next"
              android:title="@string/menu_debug_go_to_next"
              android:onClick="debugGoToNext"
              app:showAsAction="ifRoom"/>
        <item android:id="@+id/menu_debug_go_to"
              android:icon="@drawable/ic_menu_debug_go_to"
              android:title="@string/menu_debug_go_to"
              android:onClick="debugGoTo"
              app:showAsAction="never"/>
        <item android:id="@+id/menu_debug_noob_wolf"
              android:icon="@drawable/ic_menu_debug"
              android:title="@string/menu_debug_noob_wolf"
              android:onClick="debugNoobWolf"
              app:showAsAction="never"/>
        <item android:id="@+id/menu_debug_leet_wolf"
              android:icon="@drawable/ic_menu_debug"
              android:title="@string/menu_debug_leet_wolf"
              android:onClick="debugLeetWolf"
              app:showAsAction="never"/>
        <item android:id="@+id/menu_debug_log"
              android:icon="@drawable/ic_menu_debug_log"
              android:title="@string/menu_debug_log"
              android:onClick="debugLog"
              app:showAsAction="never"/>
    </group>
</menu>
